testsuite/tests/rename/should_fail/T15487.hs
module T15487 where

import qualified T15487a

null = 42

foo x = null
